# hrosailing

./: .flake8  .gitignore  .pylintrc  CITATION.cff  Documentation.rst  PolarDiagram.py  README.md  SailingUnits.py  TODO.md  __init__.py  _exceptions.py  _filereading.py  _interpolating_functions.py  _plotting_functions.py  _sailing_units.py  _utils.py  azure-pipelines.yml  data_processing.py  exceptions.py  filereading.py  index.html  index.js  pipeline.html  plotting.py  polar_diagram.py  polardiagram.py  pyproject.toml  requirements.txt  sailing_units.py  setup.cfg  setup.py  tox.ini  utils.py  wind.html  windconversion.py
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature_request.md
.github/workflows/: build-and-test.yml  build.yml  format.yml  gh-pages.yml  linting.yml  pr-autoblack.yml  pr-bandit.yml  pr-formatting.yml  pr-isort.yml  pr-pylint.yml  pr-pytest.yml  publish.yml  push-autoblack.yml  push-bandit.yml  push-formatting.yml  (+6 more)
Documentation/: Documentation.rst
WIP/: bezier.py  data_processing.py
data_analysis/: defaultfunctions.py  filter.py  interpolater.py  models2d.py  models3d.py  neighbourhood.py  nonlinearestimator.py  odrestimator.py  odrestimator2d.py  processing.py  regressor.py  sampler.py  weigher.py
deprecated_tests/: polardiagram_curve_test.py  polardiagram_multisails_test.py  wind_test.py  writingreading_test.py
docs/: doc-search.html  index.html  index.js  robots.txt  sitemap.txt
examples/: __init__.py  array_format_example.csv  polardiagramex.py  processingex.py
hrosailing/: __init__.py  _doc.py  _logfolder.py  _pdoc.py  _version.py  exceptions.py  filereading.py  globe_model.py  utils.py  wind.py  windconversion.py
polardiagram/: __init__.py  plotting.py  polardiagram.py
processing/: processing.py
templates/: _lunr_search.inc.mako  config.mako  head.mako  html.mako  logo.mako  pdf.mako  search.mako  text.mako
tests/: TestCsvFileHandler.csv  __init__.py  _test_plot_functions.py  array_format_example.csv  pc-hro.csv  pd-array.csv  pd-hro.csv  pd-opencpn.csv  plotting_test.py  plottingtests.py  polardiagram_cloud_test.py  polardiagram_curve_test.py  polardiagram_multisails_test.py  polardiagram_table_test.py  polardiagram_test.py  polardiagramtests.py  utils_for_testing.py  utilstest.py  wind_test.py  windconversiontests.py  windtest.py  writingreading_test.py  writingreadingtests.py
(+375 files in other folders)
