[metadata]
name = hrosailing
version = 0.0.1
author = Valentin Dannenberg / Robert Schueler
author_email = valentin.dannen@googlemail.com
description =
long_description = file: README.md
long_description_content = text/markdown
url = https://github.com/VFDannenberg/hrosailing
project_urls =
    Bug Tracker = https://github.com/VFDannenberg/hrosailing/issues
classifiers =
    Programming Language :: Python :: 3
    Licence
    Operating System :: OS Independent

[options]
package_dir =
    = hrosailing
packages = find:
python_requires = >=3.8

[option.packages.find]
where = hrosailing