[metadata]
name = hrosailing
version = 0.0.1
author = Valentin Dannenberg / Robert Schueler
author_email = valentin.dannenberg2@uni-rostock.de
description = Python library for Polar (Performance) Diagrams
long_description = file: README.md
long_description_content = text/markdown
url = https://github.com/VFDannenberg/hrosailing
project_urls =
    Bug Tracker = https://github.com/VFDannenberg/hrosailing/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
    License
    Operating System :: OS Independent

[options]
package_dir =
    = hrosailing
packages = find:
python_requires = >=3.8

[option.packages.find]
where = hrosailing