[metadata]
name = hrosailing
version = 0.9.0
author = Valentin Dannenberg & Robert Schueler
author_email = valentin.dannenberg2@uni-rostock.de
description = Python library for Polar (Performance) Diagrams
long_description = file: README.md
long_description_content = text/markdown
url = https://github.com/hrosailing/hrosailing
project_urls =
    Bug Tracker = https://github.com/hrosailing/hrosailing/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = hrosailing
packages = find:
python_requires = >=3.7

[option.packages.find]
where = hrosailing